Keep Android 8 compatibility in retry handling